// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal snapshots default modal matches snapshot 1`] = `
<Memo(Modal)>
  <Portal
    containerInfo={
      <body>
        <div
          class=""
        >
          <div
            class=""
            style="max-width: 500px; min-width: 200px; max-height: 500px; min-height: 100px;"
          >
            <button
              class="closeButton"
              role="button"
            >
              x
            </button>
          </div>
          <div
            class="overlay"
          />
        </div>
      </body>
    }
  >
    <div
      className=""
    >
      <div
        className=""
        style={
          Object {
            "maxHeight": "500px",
            "maxWidth": "500px",
            "minHeight": "100px",
            "minWidth": "200px",
          }
        }
      >
        <CloseButton
          className={null}
          icon={null}
          onClick={[Function]}
        >
          <button
            className="closeButton"
            onClick={[Function]}
            role="button"
          >
            x
          </button>
        </CloseButton>
      </div>
      <Overlay
        className={null}
        onClick={[Function]}
      >
        <div
          className="overlay"
          onClick={[Function]}
        />
      </Overlay>
    </div>
  </Portal>
</Memo(Modal)>
`;

exports[`Modal snapshots fluid modal matches snapshot 1`] = `
<Memo(Modal)>
  <Portal
    containerInfo={
      <body>
        <div
          class=""
        >
          <div
            class=""
            style="max-width: 500px; min-width: 200px; max-height: 500px; min-height: 100px;"
          >
            <button
              class="closeButton"
              role="button"
            >
              x
            </button>
          </div>
          <div
            class="overlay"
          />
        </div>
        <div
          class=""
        >
          <div
            class=""
            style="max-width: 500px; min-width: 200px; max-height: 500px; min-height: 100px;"
          >
            <button
              class="closeButton"
              role="button"
            >
              x
            </button>
          </div>
          <div
            class="overlay"
          />
        </div>
      </body>
    }
  >
    <div
      className=""
    >
      <div
        className=""
        style={
          Object {
            "maxHeight": "500px",
            "maxWidth": "500px",
            "minHeight": "100px",
            "minWidth": "200px",
          }
        }
      >
        <CloseButton
          className={null}
          icon={null}
          onClick={[Function]}
        >
          <button
            className="closeButton"
            onClick={[Function]}
            role="button"
          >
            x
          </button>
        </CloseButton>
      </div>
      <Overlay
        className={null}
        onClick={[Function]}
      >
        <div
          className="overlay"
          onClick={[Function]}
        />
      </Overlay>
    </div>
  </Portal>
</Memo(Modal)>
`;

exports[`Modal snapshots modal matches snapshot when custom styles are set 1`] = `
<Memo(Modal)
  customClassNames={
    Object {
      "closeBtn": "closeButtonClassName",
      "modal": "modalClassName",
      "overlay": "overlayClassName",
      "wrapper": "wrapperClassName",
    }
  }
>
  <Portal
    containerInfo={
      <body>
        <div
          class=""
        >
          <div
            class=""
            style="max-width: 500px; min-width: 200px; max-height: 500px; min-height: 100px;"
          >
            <button
              class="closeButton"
              role="button"
            >
              x
            </button>
          </div>
          <div
            class="overlay"
          />
        </div>
        <div
          class=""
        >
          <div
            class=""
            style="max-width: 500px; min-width: 200px; max-height: 500px; min-height: 100px;"
          >
            <button
              class="closeButton"
              role="button"
            >
              x
            </button>
          </div>
          <div
            class="overlay"
          />
        </div>
        <div
          class=""
        >
          <div
            class=""
            style="max-width: 120px; min-width: 60px; max-height: 100px; min-height: 50px;"
          >
            <button
              class="closeButton"
              role="button"
            >
              x
            </button>
          </div>
          <div
            class="overlay"
          />
        </div>
        <div
          class="wrapperClassName"
        >
          <div
            class="modalClassName"
            style="max-width: 500px; min-width: 200px; max-height: 500px; min-height: 100px;"
          >
            <button
              class="closeButton closeButtonClassName"
              role="button"
            >
              x
            </button>
          </div>
          <div
            class="overlay overlayClassName"
          />
        </div>
      </body>
    }
  >
    <div
      className="wrapperClassName"
    >
      <div
        className="modalClassName"
        style={
          Object {
            "maxHeight": "500px",
            "maxWidth": "500px",
            "minHeight": "100px",
            "minWidth": "200px",
          }
        }
      >
        <CloseButton
          className="closeButtonClassName"
          icon={null}
          onClick={[Function]}
        >
          <button
            className="closeButton closeButtonClassName"
            onClick={[Function]}
            role="button"
          >
            x
          </button>
        </CloseButton>
      </div>
      <Overlay
        className="overlayClassName"
        onClick={[Function]}
      >
        <div
          className="overlay overlayClassName"
          onClick={[Function]}
        />
      </Overlay>
    </div>
  </Portal>
</Memo(Modal)>
`;

exports[`Modal snapshots modal matches snapshot when maxHeight/minHeight/maxWidth/minWidth props are provided 1`] = `
<Memo(Modal)
  maxHeight={100}
  maxWidth={120}
  minHeight={50}
  minWidth={60}
>
  <Portal
    containerInfo={
      <body>
        <div
          class=""
        >
          <div
            class=""
            style="max-width: 500px; min-width: 200px; max-height: 500px; min-height: 100px;"
          >
            <button
              class="closeButton"
              role="button"
            >
              x
            </button>
          </div>
          <div
            class="overlay"
          />
        </div>
        <div
          class=""
        >
          <div
            class=""
            style="max-width: 500px; min-width: 200px; max-height: 500px; min-height: 100px;"
          >
            <button
              class="closeButton"
              role="button"
            >
              x
            </button>
          </div>
          <div
            class="overlay"
          />
        </div>
        <div
          class=""
        >
          <div
            class=""
            style="max-width: 120px; min-width: 60px; max-height: 100px; min-height: 50px;"
          >
            <button
              class="closeButton"
              role="button"
            >
              x
            </button>
          </div>
          <div
            class="overlay"
          />
        </div>
      </body>
    }
  >
    <div
      className=""
    >
      <div
        className=""
        style={
          Object {
            "maxHeight": "100px",
            "maxWidth": "120px",
            "minHeight": "50px",
            "minWidth": "60px",
          }
        }
      >
        <CloseButton
          className={null}
          icon={null}
          onClick={[Function]}
        >
          <button
            className="closeButton"
            onClick={[Function]}
            role="button"
          >
            x
          </button>
        </CloseButton>
      </div>
      <Overlay
        className={null}
        onClick={[Function]}
      >
        <div
          className="overlay"
          onClick={[Function]}
        />
      </Overlay>
    </div>
  </Portal>
</Memo(Modal)>
`;
